--- a/Kah.html
+++ b/Kah.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KahPeripherique - Accueil</title>
+    <title>KahPeripherique</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         /* Charte graphique */
         body {
             margin: 0;
-            font-family: 'Arial', sans-serif;
+            font-family: 'Idealist Sans', sans-serif;
             background-color: #000;
             color: #fff;
         }
@@ -49,7 +49,6 @@
             color: #F4C04D; /* Jaune doré */
             text-decoration: none;
             font-size: 16px;
-            font-weight: bold;
             display: flex;
             align-items: center;
         }
@@ -116,6 +115,7 @@
                 display: none;
             }
         }
+
     </style>
 </head>
 <body>
@@ -135,7 +135,7 @@
                 <li><a href="#apropos"><i class="fas fa-info-circle"></i><strong>À PROPOS</strong></a></li>
             </ul>
 
-            <!-- Bouton Contact (grand écran) -->
+            <!-- Bouton Contact sur grands écrans -->
             <div class="contact-button">
                 <a href="#contact">
                     <span>Contactez-nous</span>
@@ -159,6 +159,5 @@
         });
     </script>
 
-  
 </body>
 </html>
