--- a/Kah.html
+++ b/Kah.html
@@ -10,12 +10,12 @@
         body {
             margin: 0;
             font-family: 'Idealist Sans', sans-serif;
-            background-color: #000;
-            color: #fff;
+            background-color: #fff;
+            color: #000;
         }
 
         header {
-            background-color: #000;
+            background-color: #1C2341;
             padding: 15px 0;
             position: fixed;
             top: 0;
