--- a/Kah.html
+++ b/Kah.html
@@ -124,7 +124,7 @@
         <nav class="navbar">
             <!-- Logo -->
             <div class="logo">
-                <img src="iconn.jpeg" alt="Logo KahPeripherique">
+                <img src="5eabf964-b198-41e0-b354-3127e931e117.jpeg" alt="Logo KahPeripherique">
             </div>
 
             <!-- Menu de navigation -->
