--- a/Kah.html
+++ b/Kah.html
@@ -439,6 +439,116 @@
         Contactez-nous dès maintenant
     </a>
 </section>
+ 
+
+<section class="realisations">
+  <h2>Nos Réalisations</h2>
+  <div class="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item">
+        <img src="image1.jpg" alt="Réalisation 1">
+      </div>
+      <div class="carousel-item">
+        <video src="video1.mp4" controls></video>
+      </div>
+      <div class="carousel-item">
+        <img src="image2.jpg" alt="Réalisation 2">
+      </div>
+      <div class="carousel-item">
+        <img src="image3.jpg" alt="Réalisation 3">
+      </div>
+      <div class="carousel-item">
+        <video src="video2.mp4" controls></video>
+      </div>
+      <div class="carousel-item">
+        <img src="image4.jpg" alt="Réalisation 4">
+      </div>
+      <div class="carousel-item">
+        <img src="image5.jpg" alt="Réalisation 5">
+      </div>
+      <div class="carousel-item">
+        <video src="video3.mp4" controls></video>
+      </div>
+      <div class="carousel-item">
+        <img src="image6.jpg" alt="Réalisation 6">
+      </div>
+      <div class="carousel-item">
+        <img src="image7.jpg" alt="Réalisation 7">
+      </div>
+    </div>
+  </div>
+</section>
+
+<style>
+  .realisations {
+    text-align: center;
+    background-color: #1C2341; /* Bleu foncé */
+    padding: 50px 0;
+    color: white;
+  }
+
+  .realisations h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    margin-bottom: 30px;
+  }
+
+  .carousel {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .carousel-inner {
+    display: flex;
+    gap: 20px;
+    scroll-behavior: smooth;
+  }
+
+  .carousel-item {
+    flex: 0 0 auto;
+    width: 300px; /* Taille des items, ajustable */
+  }
+
+  .carousel-item img,
+  .carousel-item video {
+    width: 100%;
+    height: auto;
+    border-radius: 10px;
+  }
+
+  .carousel-inner::-webkit-scrollbar {
+    display: none; /* Masquer la barre de défilement */
+  }
+
+  .carousel-inner {
+    scrollbar-width: none; /* Masquer la barre de défilement pour Firefox */
+  }
+
+  /* Responsivité pour petits écrans */
+  @media (max-width: 768px) {
+    .carousel-inner {
+      gap: 10px;
+    }
+
+    .carousel-item {
+      width: 250px;
+    }
+  }
+
+  /* Responsivité pour écrans très petits */
+  @media (max-width: 480px) {
+    .carousel-inner {
+      gap: 5px;
+    }
+
+    .carousel-item {
+      width: 200px;
+    }
+  }
+</style>
+
+
     
 </body>
 </html>
