--- a/Kah.html
+++ b/Kah.html
@@ -447,33 +447,43 @@
     <div class="carousel-inner">
       <div class="carousel-item">
         <img src="image1.jpg" alt="Réalisation 1">
+        <div class="description">Réalisation 1 - Design graphique</div>
       </div>
       <div class="carousel-item">
         <video src="video1.mp4" controls></video>
+        <div class="description">Vidéo 1 - Publicité visuelle</div>
       </div>
       <div class="carousel-item">
         <img src="image2.jpg" alt="Réalisation 2">
+        <div class="description">Réalisation 2 - Illustration</div>
       </div>
       <div class="carousel-item">
         <img src="image3.jpg" alt="Réalisation 3">
+        <div class="description">Réalisation 3 - Affiche publicitaire</div>
       </div>
       <div class="carousel-item">
         <video src="video2.mp4" controls></video>
+        <div class="description">Vidéo 2 - Vidéo d'animation</div>
       </div>
       <div class="carousel-item">
         <img src="image4.jpg" alt="Réalisation 4">
+        <div class="description">Réalisation 4 - Branding</div>
       </div>
       <div class="carousel-item">
         <img src="image5.jpg" alt="Réalisation 5">
+        <div class="description">Réalisation 5 - Logo design</div>
       </div>
       <div class="carousel-item">
         <video src="video3.mp4" controls></video>
+        <div class="description">Vidéo 3 - Montage vidéo</div>
       </div>
       <div class="carousel-item">
         <img src="image6.jpg" alt="Réalisation 6">
+        <div class="description">Réalisation 6 - Illustration numérique</div>
       </div>
       <div class="carousel-item">
         <img src="image7.jpg" alt="Réalisation 7">
+        <div class="description">Réalisation 7 - Packaging produit</div>
       </div>
     </div>
   </div>
@@ -497,32 +507,55 @@
   .carousel {
     position: relative;
     overflow: hidden;
+    width: 100%;
   }
 
   .carousel-inner {
     display: flex;
     gap: 20px;
-    scroll-behavior: smooth;
+    animation: slide 30s infinite linear;
   }
 
   .carousel-item {
     flex: 0 0 auto;
-    width: 300px; /* Taille des items, ajustable */
+    width: 250px; /* Taille uniforme */
+    height: 400px; /* Taille uniforme en portrait */
+    position: relative;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
   }
 
   .carousel-item img,
   .carousel-item video {
     width: 100%;
-    height: auto;
+    height: 80%;
     border-radius: 10px;
   }
 
+  .description {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  /* Animation pour faire défiler automatiquement */
+  @keyframes slide {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(-100%); }
+  }
+
+  /* Masquer la barre de défilement */
   .carousel-inner::-webkit-scrollbar {
-    display: none; /* Masquer la barre de défilement */
+    display: none;
   }
 
   .carousel-inner {
-    scrollbar-width: none; /* Masquer la barre de défilement pour Firefox */
+    scrollbar-width: none;
   }
 
   /* Responsivité pour petits écrans */
@@ -532,7 +565,8 @@
     }
 
     .carousel-item {
-      width: 250px;
+      width: 200px;
+      height: 350px;
     }
   }
 
@@ -543,7 +577,8 @@
     }
 
     .carousel-item {
-      width: 200px;
+      width: 160px;
+      height: 300px;
     }
   }
 </style>
