--- a/Kah.html
+++ b/Kah.html
@@ -492,7 +492,7 @@
 <style>
   .realisations {
     text-align: center;
-    background-color: #1C2341; /* Bleu foncé */
+    background-color: #000; /* Bleu foncé */
     padding: 50px 0;
     color: white;
   }
@@ -502,6 +502,7 @@
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 30px;
+    color: #1C2341;
   }
 
   .carousel {
@@ -513,7 +514,7 @@
 
   .carousel-inner {
     display: flex;
-    gap: 30px; /* Espace entre les éléments */
+    gap: 40px; /* Espace entre les éléments */
   }
 
   .carousel-item {
@@ -530,7 +531,7 @@
   .carousel-item video {
     width: 100%;
     height: 80%;
-    border-radius: 10px;
+    border-radius: 20px;
   }
 
   .description {
@@ -546,7 +547,7 @@
 
   /* Zoom sur appui long */
   .zoomed {
-    transform: scale(1.2); /* Agrandir l'élément */
+    transform: scale(1.5); /* Agrandir l'élément */
     z-index: 10;
   }
 
