--- a/Kah.html
+++ b/Kah.html
@@ -492,9 +492,9 @@
 <style>
   .realisations {
     text-align: center;
-    background-color: #000; /* Bleu foncé */
+    background-color: fff; /* Bleu foncé */
     padding: 50px 0;
-    color: white;
+    color: #F4C04D;
   }
 
   .realisations h2 {
