--- a/Kah.html
+++ b/Kah.html
@@ -249,7 +249,7 @@
     }
 </style>
 
-<section id="a-propos">
+<section id="about">
     <h2 style="text-align: center; font-size: 32px; color: #F4C04D; margin-bottom: 40px;">Tout Savoir sur KahPeripherique</h2>
     <div class="about-container" style="margin-bottom: 40px;">
         <img src="https://www.francetravail.fr/files/live/sites/PE/files/secteurs-metiers/Domotique-web-telecom/sorienter-vers-linformatique850.jpg" alt="À propos de KahPeripherique" class="about-image">
@@ -362,14 +362,14 @@
     .services-container {
         display: flex;
         flex-wrap: wrap;
-        gap: 20px;
+        gap: 15px;
         justify-content: center;
     }
 
     .service-item {
         width: 250px;
         text-align: center;
-        padding: 20px;
+        padding: 15px;
         background-color: #fff;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
