--- a/Kah.html
+++ b/Kah.html
@@ -622,7 +622,100 @@
   }
 </script>
 
+<section class="formation-section">
+  <style>
+    .formation-section {
+      background-color: #1C2341;
+      padding: 60px 20px;
+      font-family: 'Poppins', sans-serif;
+      color: white;
+      text-align: center;
+    }
 
+    .formation-section .section-title {
+      font-size: 36px;
+      color: #F4C04D;
+      margin-bottom: 10px;
+    }
+
+    .formation-section .section-subtitle {
+      font-size: 18px;
+      color: #ddd;
+      margin-bottom: 40px;
+    }
+
+    .formation-section .cards {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 30px;
+    }
+
+    .formation-section .card {
+      background-color: #2a3052;
+      border-radius: 12px;
+      padding: 30px 20px;
+      width: 300px;
+      transition: transform 0.3s;
+      text-align: left;
+    }
+
+    .formation-section .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .formation-section .icon {
+      margin-bottom: 20px;
+      font-size: 40px;
+      color: #F4C04D;
+    }
+
+    .formation-section .card h3 {
+      color: #F4C04D;
+      font-size: 22px;
+      margin-bottom: 10px;
+    }
+
+    .formation-section .card p {
+      font-size: 16px;
+      color: #ccc;
+    }
+  </style>
+
+  <div class="container">
+    <h2 class="section-title">Formations Visuelles</h2>
+    <p class="section-subtitle">Apprenez avec des experts du domaine visuel</p>
+
+    <div class="cards">
+      <div class="card">
+        <div class="icon">
+          <i class="fas fa-palette"></i>
+        </div>
+        <h3>Design Graphique</h3>
+        <p>Maîtrisez Photoshop, Illustrator, Figma et créez des visuels percutants.</p>
+      </div>
+
+      <div class="card">
+        <div class="icon">
+          <i class="fas fa-video"></i>
+        </div>
+        <h3>Vidéo & Animation</h3>
+        <p>Apprenez le montage, les effets spéciaux et l'animation pro.</p>
+      </div>
+
+      <div class="card">
+        <div class="icon">
+          <i class="fas fa-camera-retro"></i>
+        </div>
+        <h3>Photographie</h3>
+        <p>Développez votre œil artistique et votre maîtrise technique.</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- Font Awesome CDN (à mettre UNE fois dans la page) -->
+  <script src="https://kit.fontawesome.com/6f87c9d7e3.js" crossorigin="anonymous"></script>
+</section>
     
 </body>
 </html>
