--- a/Kah.html
+++ b/Kah.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KahPeripherique</title>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
         /* Charte graphique */
@@ -625,22 +626,22 @@
 <section class="formation-section">
   <style>
     .formation-section {
-      background-color: #1C2341;
+      background-color: #ffffff;
       padding: 60px 20px;
       font-family: 'Poppins', sans-serif;
-      color: white;
+      color: #1C2341;
       text-align: center;
     }
 
     .formation-section .section-title {
       font-size: 36px;
-      color: #F4C04D;
+      color: #1C2341;
       margin-bottom: 10px;
     }
 
     .formation-section .section-subtitle {
       font-size: 18px;
-      color: #ddd;
+      color: #555;
       margin-bottom: 40px;
     }
 
@@ -652,7 +653,7 @@
     }
 
     .formation-section .card {
-      background-color: #2a3052;
+      background-color: #f5f5f5;
       border-radius: 12px;
       padding: 30px 20px;
       width: 300px;
@@ -671,14 +672,46 @@
     }
 
     .formation-section .card h3 {
-      color: #F4C04D;
+      color: #1C2341;
       font-size: 22px;
       margin-bottom: 10px;
     }
 
     .formation-section .card p {
       font-size: 16px;
-      color: #ccc;
+      color: #444;
+    }
+
+    .formation-section .cta-button {
+      display: inline-block;
+      margin-top: 50px;
+      padding: 15px 30px;
+      background-color: #F4C04D;
+      color: #1C2341;
+      font-weight: bold;
+      font-size: 16px;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s;
+    }
+
+    .formation-section .cta-button:hover {
+      background-color: #e2aa3e;
+    }
+
+    @media (max-width: 768px) {
+      .formation-section .card {
+        width: 90%;
+      }
+
+      .formation-section .section-title {
+        font-size: 28px;
+      }
+
+      .formation-section .section-subtitle {
+        font-size: 16px;
+      }
     }
   </style>
 
@@ -711,9 +744,11 @@
         <p>Développez votre œil artistique et votre maîtrise technique.</p>
       </div>
     </div>
+
+    <a class="cta-button" href="https://wa.me/243977997048" target="_blank">Réservez votre place maintenant</a>
   </div>
 
-  <!-- Font Awesome CDN (à mettre UNE fois dans la page) -->
+  <!-- Font Awesome (n’inclure qu’une fois par page) -->
   <script src="https://kit.fontawesome.com/6f87c9d7e3.js" crossorigin="anonymous"></script>
 </section>
     
