--- a/Kah.html
+++ b/Kah.html
@@ -626,7 +626,7 @@
 <section class="formation-section">
   <style>
     .formation-section {
-      background-color: #ffffff;
+      background-color: #ffffff; /* Fond blanc */
       padding: 60px 20px;
       font-family: 'Poppins', sans-serif;
       color: #1C2341;
@@ -641,7 +641,7 @@
 
     .formation-section .section-subtitle {
       font-size: 18px;
-      color: #555;
+      color: #ddd;
       margin-bottom: 40px;
     }
 
@@ -653,7 +653,7 @@
     }
 
     .formation-section .card {
-      background-color: #f5f5f5;
+      background-color: #2a3052;
       border-radius: 12px;
       padding: 30px 20px;
       width: 300px;
@@ -672,14 +672,14 @@
     }
 
     .formation-section .card h3 {
-      color: #1C2341;
+      color: #F4C04D;
       font-size: 22px;
       margin-bottom: 10px;
     }
 
     .formation-section .card p {
       font-size: 16px;
-      color: #444;
+      color: #ccc;
     }
 
     .formation-section .cta-button {
