--- a/Kah.html
+++ b/Kah.html
@@ -641,7 +641,7 @@
 
     .formation-section .section-subtitle {
       font-size: 18px;
-      color: #ddd;
+      color: #555;
       margin-bottom: 40px;
     }
 
@@ -653,12 +653,13 @@
     }
 
     .formation-section .card {
-      background-color: #2a3052;
+      background-color: #2a3052; /* Cartes sombres */
       border-radius: 12px;
       padding: 30px 20px;
       width: 300px;
       transition: transform 0.3s;
       text-align: left;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
     }
 
     .formation-section .card:hover {
