--- a/Kah.html
+++ b/Kah.html
@@ -259,7 +259,7 @@
                 KahPeripherique est une entreprise spécialisée dans la communication visuelle, offrant des solutions créatives et sur mesure pour transmettre des messages puissants à travers des éléments visuels. 
                 Nous intervenons dans plusieurs domaines, tels que le design graphique, l'illustration, la photographie, la vidéo et animation, l'infographie, le webdesign, la signalétique, et bien plus.
             </p>
-            <p style="text-align: justify; color: #1C2341;">
+            <p style="text-align: justify;letter-spacing: 3px;color: #1C2341;">
                 Notre équipe de créateurs passionnés met son expertise au service des entreprises et des particuliers pour des projets personnalisés qui allient innovation et qualité. Grâce à notre approche professionnelle et minimaliste, nous transformons vos idées en créations visuelles impactantes qui marquent les esprits.
             </p>
         </div>
@@ -271,10 +271,11 @@
             align-items: center;
             justify-content: space-between;
             gap: 40px;
+            width: 80%;
         }
 
         .about-image {
-            width: 45%; 
+            width: 60%; 
         }
 
         .about-text {
