--- a/Kah.html
+++ b/Kah.html
@@ -753,6 +753,116 @@
   <!-- Font Awesome (n’inclure qu’une fois par page) -->
   <script src="https://kit.fontawesome.com/6f87c9d7e3.js" crossorigin="anonymous"></script>
 </section>
+
+<section id="footer">
+    <div class="footer-container">
+
+        <div class="footer-box">
+            <h3>KahPeripherique</h3>
+            <ul>
+                <li>Accueil</li>
+                <li>À propos</li>
+                <li>Services</li>
+                <li>Formations</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+
+        <div class="footer-box">
+            <h3>Nos Domaines</h3>
+            <ul>
+                <li>Design Graphique</li>
+                <li>Illustration</li>
+                <li>Photographie</li>
+                <li>Vidéo & Animation</li>
+                <li>Infographie</li>
+                <li>Webdesign</li>
+                <li>Signalétique</li>
+                <li>Publicité Visuelle</li>
+            </ul>
+        </div>
+
+        <div class="footer-box">
+            <h3>Contact</h3>
+            <ul>
+                <li><i class="fas fa-envelope"></i> kahperipherique@gmail.com</li>
+                <li><i class="fas fa-phone-alt"></i> +243 977 997 048</li>
+                <li><i class="fas fa-map-marker-alt"></i> Lubumbashi & Kolwezi, RDC</li>
+            </ul>
+        </div>
+
+        <div class="footer-box">
+            <h3>Suivez-nous</h3>
+            <ul>
+                <li><i class="fab fa-facebook"></i> Facebook</li>
+                <li><i class="fab fa-instagram"></i> Instagram</li>
+                <li><i class="fab fa-linkedin"></i> LinkedIn</li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="footer-copyright">
+        <p>&copy; 2025 KahPeripherique. Tous droits réservés.</p>
+    </div>
+</section>
+
+<style>
+
+#footer {
+    padding: 50px 20px;
+    background-color: #1C2341; /* Bleu foncé de KahPeripherique */
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    max-width: 1100px;
+    margin: auto;
+    padding: 20px;
+}
+
+.footer-box {
+    text-align: left;
+}
+
+.footer-box h3 {
+    font-size: 22px;
+    font-weight: bold;
+    margin-bottom: 15px;
+    color: #F4C04D; /* Jaune doré de KahPeripherique */
+}
+
+.footer-box ul {
+    list-style: none;
+    padding: 0;
+}
+
+.footer-box ul li {
+    font-size: 16px;
+    margin-bottom: 8px;
+    color: #FFFFFF;
+}
+
+.footer-box ul li i {
+    margin-right: 10px;
+    color: #F4C04D; /* Petits icônes en doré */
+    font-size: 18px;
+}
+
+.footer-copyright {
+    margin-top: 30px;
+    font-size: 14px;
+}
+
+.footer-copyright p {
+    color: #FFFFFF;
+}
+
+</style>
     
 </body>
 </html>
