--- a/Kah.html
+++ b/Kah.html
@@ -763,8 +763,6 @@
                 <li><i class="fas fa-home"></i> Accueil</li>
                 <li><i class="fas fa-info-circle"></i> À propos</li>
                 <li><i class="fas fa-cogs"></i> Services</li>
-                <li><i class="fas fa-bullhorn"></i> Promotions</li>
-                <li><i class="fas fa-chalkboard-teacher"></i> Formation</li>
                 <li><i class="fas fa-envelope-open-text"></i> Contact</li>
             </ul>
         </div>
@@ -847,7 +845,7 @@
 
     .footer-box ul li i {
         font-size: 18px;
-        color: inherit;
+        color: currentColor; /* très important : la couleur du texte */
     }
 
     .footer-copyright {
@@ -863,8 +861,6 @@
     }
 </style>
 
-<!-- Lien Font Awesome à ajouter si nécessaire -->
-<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
-    
-</body>
+<!-- Assure-toi d’inclure Font Awesome -->
+<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script></body>
 </html>
