--- a/Kah.html
+++ b/Kah.html
@@ -754,7 +754,7 @@
   <script src="https://kit.fontawesome.com/6f87c9d7e3.js" crossorigin="anonymous"></script>
 </section>
 
-<section id="footer">
+<s<section id="footer">
     <div class="footer-container">
 
         <div class="footer-box">
@@ -845,7 +845,7 @@
 
     .footer-box ul li i {
         font-size: 18px;
-        color: currentColor; /* très important : la couleur du texte */
+        color: inherit; /* Les icônes prennent la couleur du texte */
     }
 
     .footer-copyright {
@@ -854,13 +854,15 @@
         color: #FFFFFF;
     }
 
+    /* Pas de recentrage sur mobile */
     @media (max-width: 600px) {
         .footer-box {
-            text-align: center;
+            text-align: left; /* Reste aligné à gauche même sur mobile */
         }
     }
 </style>
 
-<!-- Assure-toi d’inclure Font Awesome -->
-<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script></body>
+<!-- N'oublie pas d’inclure Font Awesome -->
+<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
+</body>
 </html>
