--- a/Kah.html
+++ b/Kah.html
@@ -754,7 +754,7 @@
   <script src="https://kit.fontawesome.com/6f87c9d7e3.js" crossorigin="anonymous"></script>
 </section>
 
-<s<section id="footer">
+<section id="footer">
     <div class="footer-container">
 
         <div class="footer-box">
@@ -804,8 +804,8 @@
 <style>
     #footer {
         padding: 50px 20px;
-        background-color: #000000;
-        color: #FFFFFF;
+        background-color: #1C2341; /* Bleu foncé */
+        color: #F4C04D; /* Jaune doré */
         text-align: center;
     }
 
@@ -826,7 +826,7 @@
         font-size: 22px;
         font-weight: bold;
         margin-bottom: 15px;
-        color: #FFFFFF;
+        color: #F4C04D;
     }
 
     .footer-box ul {
@@ -837,7 +837,7 @@
     .footer-box ul li {
         font-size: 16px;
         margin-bottom: 10px;
-        color: #FFFFFF;
+        color: #F4C04D;
         display: flex;
         align-items: center;
         gap: 8px;
@@ -845,24 +845,22 @@
 
     .footer-box ul li i {
         font-size: 18px;
-        color: inherit; /* Les icônes prennent la couleur du texte */
+        color: inherit; /* même couleur que le texte */
     }
 
     .footer-copyright {
         margin-top: 30px;
         font-size: 14px;
-        color: #FFFFFF;
+        color: #F4C04D;
     }
 
-    /* Pas de recentrage sur mobile */
     @media (max-width: 600px) {
         .footer-box {
-            text-align: left; /* Reste aligné à gauche même sur mobile */
+            text-align: center;
         }
     }
 </style>
 
 <!-- N'oublie pas d’inclure Font Awesome -->
-<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
-</body>
+<script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script></body>
 </html>
