--- a/Kah.html
+++ b/Kah.html
@@ -855,7 +855,7 @@
     }
 
     @media (max-width: 600px) {
-        .footer-box {
+        .footer-box ul{
             text-align: center;
         }
     }
