--- a/Kah.html
+++ b/Kah.html
@@ -764,6 +764,8 @@
                 <li><i class="fas fa-info-circle"></i> À propos</li>
                 <li><i class="fas fa-cogs"></i> Services</li>
                 <li><i class="fas fa-envelope-open-text"></i> Contact</li>
+                <li><i class="fas fa-chalkboard-teacher"></i> Formation</li>
+                <li><i class="fas fa-bullhorn"></i> Promotion</li>
             </ul>
         </div>
 
