--- a/Kah.html
+++ b/Kah.html
@@ -309,49 +309,49 @@
 
         <div class="services-container" style="margin-bottom: 40px;">
             <div class="service-item" onclick="window.location.href='design.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/graphic-design-image.jpg" alt="Design graphique">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Design graphique">
                 <h3>Design Graphique</h3>
                 <p>Création de logos, chartes graphiques, affiches, brochures et packaging sur mesure pour renforcer l'image de votre marque.</p>
                 <a href="design.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='illustration.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/illustration-image.jpg" alt="Illustration">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Illustration">
                 <h3>Illustration</h3>
                 <p>Conception de dessins, croquis et illustrations numériques uniques, adaptés à vos besoins visuels.</p>
                 <a href="illustration.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='photography.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/photography-image.jpg" alt="Photographie">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Photographie">
                 <h3>Photographie</h3>
                 <p>Réalisation de photos professionnelles pour renforcer vos supports de communication visuelle.</p>
                 <a href="photography.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='video-animation.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/video-animation-image.jpg" alt="Vidéo et animation">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Vidéo et animation">
                 <h3>Vidéo et Animation</h3>
                 <p>Création de vidéos et animations qui captivent votre audience et transmettent votre message de manière percutante.</p>
                 <a href="video-animation.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='infographics.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/infographics-image.jpg" alt="Infographie">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Infographie">
                 <h3>Infographie</h3>
                 <p>Représentation visuelle de données complexes pour une communication simplifiée et claire.</p>
                 <a href="infographics.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='webdesign.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/webdesign-image.jpg" alt="Webdesign">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Webdesign">
                 <h3>Webdesign</h3>
                 <p>Création de sites web fonctionnels et esthétiques pour une expérience en ligne mémorable.</p>
                 <a href="webdesign.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='signage.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/signage-image.jpg" alt="Signalétique">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Signalétique">
                 <h3>Signalétique</h3>
                 <p>Conception de panneaux, pictogrammes et indications visuelles pour une orientation claire et efficace.</p>
                 <a href="signage.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
             </div>
             <div class="service-item" onclick="window.location.href='advertising.html';" style="cursor: pointer;">
-                <img src="https://www.example.com/advertising-image.jpg" alt="Publicité Visuelle">
+                <img src="BE471E97-7BDA-4FC9-B73A-6511A9F0A6CE.png" alt="Publicité Visuelle">
                 <h3>Publicité Visuelle</h3>
                 <p>Création de supports publicitaires visuels : bannières web, affiches, et autres annonces pour promouvoir votre message.</p>
                 <a href="advertising.html" class="more-info" style="color: #F4C04D;">En savoir plus</a>
@@ -369,7 +369,7 @@
     }
 
     .service-item {
-        width: 250px;
+        width: 300px;
         text-align: center;
         padding: 15px;
         background-color: #fff;
@@ -386,7 +386,7 @@
         width: 100%;
         height: auto;
         border-radius: 5px;
-        margin-bottom: 15px;
+        margin-bottom: 10px;
     }
 
     .service-item h3 {
